# AxeProfiler

./: .gitignore  .notice  README.md  axe.py  pyproject.toml
src/: api.py  axe.py  cli.py  profiles.py
src/axeprofiler/: __main__.py  cli.py
tests/: cli_tests.py
